feat: Buscar carteiras pelo título.
